# sealdir

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.md  crypto.md
include/sealdir/: base64url.hpp  crypto.hpp  fs.hpp  header.hpp  password.hpp  vault.hpp
src/: base64url.cpp  cli.cpp  crypto.cpp  fs.cpp  header.cpp  main.cpp  password.cpp  vault.cpp
tests/: CMakeLists.txt  crypto_test.cpp  filename_test.cpp  header_test.cpp  vault_test.cpp
